# memohub

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
data/postgresql/: postmaster.pid
data/postgresql/base/1/: 2619
data/postgresql/base/16384/: 1247  1249  1249_fsm  1259  1259_fsm  1259_vm  16385  16386  16391  16392  16394  16395  16399  16401  16403  16404  16408  16410  16415  16417  16419  16424  16426  16431  16433  16435  16440  16442  16447  16449  16456  16457  16458  16470  16471  16472  16473  16485  16486  16487  (+45 more)
data/postgresql/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
data/postgresql/pg_stat_tmp/: global.stat
mem/: views.py
memohub/: asgi.py  settings.py  urls.py  wsgi.py
src/: gunicorn.conf.py  pyproject.toml
src/follow_system/: apps.py
src/mem/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
src/mem/migrations/: 0001_initial.py  0002_userfollowing.py  0003_mem_likes.py
src/mem/tests/: factories.py  test_models.py  test_urls.py  test_views.py  tests_urls.py
src/memohub/: settings.py  urls.py
src/static_files/static/css/: styles.css
src/templates/: addmem.html  base.html  blogpost_detail.html  editmem.html  home.html  login.html  main.html  user_following_followers_list.html  yourmemes.html
src/templates/registration/: logged_out.html  login.html  password_reset_complete.html  password_reset_form.html  register.html
templates/: login.html  main.html  profile.html
templates/registration/: login.html
