[tool.poetry]
name = "memohub"
version = "0.1.0"
description = ""
authors = ["ksinin <maksim.pronin1996@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.3"
psycopg2 = "^2.9.3"
social-auth-app-django = "^5.0.0"
django-crispy-forms = "^1.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
